[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tanks/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tanks/MissileTurret.gd" type="Script" id=2]
[ext_resource path="res://Bullets/Missile.tscn" type="PackedScene" id=3]
[ext_resource path="res://spritesheets/tanks.png" type="Texture" id=4]
[ext_resource path="res://UI/UnitDisplay.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 29.5425

[node name="MissileTurret" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
Bullet = ExtResource( 3 )
gun_cooldown = 2.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Body" parent="." index="1"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 532, 130, 56, 56 )

[node name="Turret" parent="." index="2"]
texture = ExtResource( 4 )
offset = Vector2( 12, 0 )
region_enabled = true
region_rect = Rect2( 643, 70, 49, 24 )

[node name="Muzzle" parent="Turret" index="0"]
position = Vector2( 55, 0 )

[node name="Flash" parent="Turret" index="1"]
position = Vector2( 37.972, 0 )

[node name="DetectRadius" type="Area2D" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

[node name="UnitDisplay" parent="." index="5" instance=ExtResource( 5 )]
[connection signal="health_changed" from="." to="UnitDisplay" method="update_healthbar"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
